Update header branding and add about/contact sections with styling

--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sneaker Shop</title>
+    <title>Olegit Sneaker Shop</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <div class="logo">sneakers</div>
+        <div class="logo">Olegit sneakers</div>
         <nav>
             <ul>
                 <li><a href="#" id="collections-link">Collections</a></li>
                 <li><a href="#" id="men-link">Men</a></li>
                 <li><a href="#" id="women-link">Women</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#" id="about-link">About</a></li>
+                <li><a href="#" id="contact-link">Contact</a></li>
             </ul>
         </nav>
         <div class="icons">
@@ -91,6 +91,20 @@
             <h2>Your Cart</h2>
             <ul id="cart-items"></ul>
         </div>
+       
+<section id="about-section" style="display:none; padding:2rem;">
+    <h2>About Us</h2>
+    <p>Welcome to Olegit Sneaker Store! We are committed to providing high-quality, stylish sneakers that combine comfort and durability for your everyday adventures. Our goal is to ensure every step you take is in confidence and comfort, with carefully curated selections for both men and women.</p>
+</section>
+
+
+<section id="contact-section" style="display:none; padding:2rem;">
+    <h2>Contact Us</h2>
+    <p>Email: <a href="mailto:olegitng@gmail.com">olegitng@gmail.com</a></p>
+    <p>Phone: <a href="tel:+2347068364743">+2347068364743</a></p>
+    <p>Walk-in Store: Olegit Store, Opposite White House, Under G Area, Ogbomoso</p>
+</section>
+
     </main>
 
     <script src="script.js"></script>
