--- a/index.html
+++ b/index.html
@@ -114,6 +114,8 @@
         <div id="cart">
             <h2>Your Cart</h2>
             <ul id="cart-items"></ul> <!-- list of items user added to cart -->
+            <button id="checkout-btn" style="margin-top: 1rem; background: #ff7d1a; color: #fff; padding: 0.5rem 1rem; border-radius: 5px;">Checkout</button>
+
         </div>
 
         <!-- About us section (hidden initially) -->
